fix: subsession bar on mobile (issue #72)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -207,7 +207,6 @@
     top: 0;
     width: 100%;
     background-color: $vcc-color;
-    border-bottom: 4px solid $vcc-color-escuro;
 
     .site-nav {
       position: fixed;
@@ -328,7 +327,12 @@
     }
 
     .subheader {
-      background-color: transparent;
+      background-color: $vcc-color-escuro;
+      float: left;
+      width: 100%;
+      img {
+        height: 36px;
+      }
     }
   }
 
@@ -385,7 +389,7 @@
 
   @media (max-width: $on-palm) {
     padding: 0;
-    margin: 60px 0 0 0;
+    margin: 90px 0 0 0;
   }
 
   .main-wrapper {
